--- a/_posts/2023-07-05-AI.md
+++ b/_posts/2023-07-05-AI.md
@@ -19,6 +19,15 @@ print("Hello world!")
 ```
 
 Maybe we should update...
-![My image Name]('/Pasted image 20230705150019.png')
+
+![](/images/2023-07.png)
+
+
+![](/images/2023-07-1.png)
+![](/images/2023-07-2.png)
+![](/images/2023-07-3.png)
+![](/images/2023-07-4.png)
+
 
 This post is kinda long to be a test one.
+
